2015-02-24  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Frontend and backend main classes have been moved to the new source
    directories src/frontend-main and src/backend-main, respectively. The
    JastAddJVersion class which is used by these main classes to obtain a
    version number was moved to src/frontend-main. This change makes it
    easier for extensions to build without the JastAddJ main classes, which
    may be undesired in extensions. Extensions that need these classes will
    need to add the new source directories to their classpath.

2015-02-17  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Add duplicate entries in localMethodsSignatureMap to enable duplicate
    inherited method checking.

2015-02-13  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Renamed the superinterfacesIterator method to interfacesIterator and
    added declaration of interfacesIterator on TypeDecl. This means that
    interfaces are now iterated over using the same iterator for both
    ClassDecl and InterfaceDecl.
    * Moved declaration of interfacesMethodsIterator from ClassDecl to
    the superclass TypeDecl.

2015-02-11  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Renamed the [ConstructorInvocation] child of ConstructorDecl to
    ParsedConstructorInvocation. This child should no longer be used to store
    implicit constructor invocations. Added new NTA child
    /ImplicitConstructorInvocation/ to represent the implicit constructor
    invocations, if needed, and added attributes named
    hasConstructorInvocation and getConstructorInvocation to mimic the former
    ConstructorInvocation child.  These changes allow for implicit constructor
    invocations to be generated while still retaining the original, parsed,
    constructor invocation in the AST.

2015-02-05  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Replaced emitEvalBranch by branchTrue and branchFalse.
    * Throw error if the constant pool overflows.
