@@ -1,3 +1,7 @@
+2015-03-03  Jesper Öqvist <jesper.oqvist@cs.lth.se>
+
+    * JavaDumpTree now ignores semantic errors
+
 2015-02-24  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Frontend and backend main classes have been moved to the new source
